Proyecto1_RutasEnInternet/Avance4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> archivo
Rule 1     archivo -> linea archivo
Rule 2     archivo -> linea
Rule 3     linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path
Rule 4     timestamp -> NUM10
Rule 5     peer_as -> NUM10
Rule 6     peer_as -> NUM9
Rule 7     prefix -> IPADDR SLASH mask
Rule 8     mask -> NUM9
Rule 9     as_path -> as_element as_path
Rule 10    as_path -> as_element
Rule 11    as_element -> as_num
Rule 12    as_element -> as_set
Rule 13    as_num -> NUM10
Rule 14    as_num -> NUM9
Rule 15    as_set -> LBRACE as_set_list RBRACE
Rule 16    as_set_list -> as_num COMMA as_set_list
Rule 17    as_set_list -> as_num

Terminals, with rules where they appear

COMMA                : 16
IPADDR               : 3 7
LBRACE               : 15
NUM10                : 4 5 13
NUM9                 : 6 8 14
PIPE                 : 3 3 3 3 3 3
RBRACE               : 15
RECORD_TYPE          : 3
SLASH                : 7
STATE                : 3
error                : 

Nonterminals, with rules where they appear

archivo              : 1 0
as_element           : 9 10
as_num               : 11 16 17
as_path              : 3 9
as_set               : 12
as_set_list          : 15 16
linea                : 1 2
mask                 : 7
peer_as              : 3
prefix               : 3
timestamp            : 3

Parsing method: LALR

state 0

    (0) S' -> . archivo
    (1) archivo -> . linea archivo
    (2) archivo -> . linea
    (3) linea -> . RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path

    RECORD_TYPE     shift and go to state 3

    archivo                        shift and go to state 1
    linea                          shift and go to state 2

state 1

    (0) S' -> archivo .



state 2

    (1) archivo -> linea . archivo
    (2) archivo -> linea .
    (1) archivo -> . linea archivo
    (2) archivo -> . linea
    (3) linea -> . RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path

    $end            reduce using rule 2 (archivo -> linea .)
    RECORD_TYPE     shift and go to state 3

    linea                          shift and go to state 2
    archivo                        shift and go to state 4

state 3

    (3) linea -> RECORD_TYPE . PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path

    PIPE            shift and go to state 5


state 4

    (1) archivo -> linea archivo .

    $end            reduce using rule 1 (archivo -> linea archivo .)


state 5

    (3) linea -> RECORD_TYPE PIPE . timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path
    (4) timestamp -> . NUM10

    NUM10           shift and go to state 7

    timestamp                      shift and go to state 6

state 6

    (3) linea -> RECORD_TYPE PIPE timestamp . PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path

    PIPE            shift and go to state 8


state 7

    (4) timestamp -> NUM10 .

    PIPE            reduce using rule 4 (timestamp -> NUM10 .)


state 8

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE . STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path

    STATE           shift and go to state 9


state 9

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE STATE . PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path

    PIPE            shift and go to state 10


state 10

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE . IPADDR PIPE peer_as PIPE prefix PIPE as_path

    IPADDR          shift and go to state 11


state 11

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR . PIPE peer_as PIPE prefix PIPE as_path

    PIPE            shift and go to state 12


state 12

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE . peer_as PIPE prefix PIPE as_path
    (5) peer_as -> . NUM10
    (6) peer_as -> . NUM9

    NUM10           shift and go to state 14
    NUM9            shift and go to state 15

    peer_as                        shift and go to state 13

state 13

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as . PIPE prefix PIPE as_path

    PIPE            shift and go to state 16


state 14

    (5) peer_as -> NUM10 .

    PIPE            reduce using rule 5 (peer_as -> NUM10 .)


state 15

    (6) peer_as -> NUM9 .

    PIPE            reduce using rule 6 (peer_as -> NUM9 .)


state 16

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE . prefix PIPE as_path
    (7) prefix -> . IPADDR SLASH mask

    IPADDR          shift and go to state 17

    prefix                         shift and go to state 18

state 17

    (7) prefix -> IPADDR . SLASH mask

    SLASH           shift and go to state 19


state 18

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix . PIPE as_path

    PIPE            shift and go to state 20


state 19

    (7) prefix -> IPADDR SLASH . mask
    (8) mask -> . NUM9

    NUM9            shift and go to state 22

    mask                           shift and go to state 21

state 20

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE . as_path
    (9) as_path -> . as_element as_path
    (10) as_path -> . as_element
    (11) as_element -> . as_num
    (12) as_element -> . as_set
    (13) as_num -> . NUM10
    (14) as_num -> . NUM9
    (15) as_set -> . LBRACE as_set_list RBRACE

    NUM10           shift and go to state 27
    NUM9            shift and go to state 28
    LBRACE          shift and go to state 29

    as_path                        shift and go to state 23
    as_element                     shift and go to state 24
    as_num                         shift and go to state 25
    as_set                         shift and go to state 26

state 21

    (7) prefix -> IPADDR SLASH mask .

    PIPE            reduce using rule 7 (prefix -> IPADDR SLASH mask .)


state 22

    (8) mask -> NUM9 .

    PIPE            reduce using rule 8 (mask -> NUM9 .)


state 23

    (3) linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path .

    RECORD_TYPE     reduce using rule 3 (linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path .)
    $end            reduce using rule 3 (linea -> RECORD_TYPE PIPE timestamp PIPE STATE PIPE IPADDR PIPE peer_as PIPE prefix PIPE as_path .)


state 24

    (9) as_path -> as_element . as_path
    (10) as_path -> as_element .
    (9) as_path -> . as_element as_path
    (10) as_path -> . as_element
    (11) as_element -> . as_num
    (12) as_element -> . as_set
    (13) as_num -> . NUM10
    (14) as_num -> . NUM9
    (15) as_set -> . LBRACE as_set_list RBRACE

    RECORD_TYPE     reduce using rule 10 (as_path -> as_element .)
    $end            reduce using rule 10 (as_path -> as_element .)
    NUM10           shift and go to state 27
    NUM9            shift and go to state 28
    LBRACE          shift and go to state 29

    as_element                     shift and go to state 24
    as_path                        shift and go to state 30
    as_num                         shift and go to state 25
    as_set                         shift and go to state 26

state 25

    (11) as_element -> as_num .

    NUM10           reduce using rule 11 (as_element -> as_num .)
    NUM9            reduce using rule 11 (as_element -> as_num .)
    LBRACE          reduce using rule 11 (as_element -> as_num .)
    RECORD_TYPE     reduce using rule 11 (as_element -> as_num .)
    $end            reduce using rule 11 (as_element -> as_num .)


state 26

    (12) as_element -> as_set .

    NUM10           reduce using rule 12 (as_element -> as_set .)
    NUM9            reduce using rule 12 (as_element -> as_set .)
    LBRACE          reduce using rule 12 (as_element -> as_set .)
    RECORD_TYPE     reduce using rule 12 (as_element -> as_set .)
    $end            reduce using rule 12 (as_element -> as_set .)


state 27

    (13) as_num -> NUM10 .

    NUM10           reduce using rule 13 (as_num -> NUM10 .)
    NUM9            reduce using rule 13 (as_num -> NUM10 .)
    LBRACE          reduce using rule 13 (as_num -> NUM10 .)
    RECORD_TYPE     reduce using rule 13 (as_num -> NUM10 .)
    $end            reduce using rule 13 (as_num -> NUM10 .)
    COMMA           reduce using rule 13 (as_num -> NUM10 .)
    RBRACE          reduce using rule 13 (as_num -> NUM10 .)


state 28

    (14) as_num -> NUM9 .

    NUM10           reduce using rule 14 (as_num -> NUM9 .)
    NUM9            reduce using rule 14 (as_num -> NUM9 .)
    LBRACE          reduce using rule 14 (as_num -> NUM9 .)
    RECORD_TYPE     reduce using rule 14 (as_num -> NUM9 .)
    $end            reduce using rule 14 (as_num -> NUM9 .)
    COMMA           reduce using rule 14 (as_num -> NUM9 .)
    RBRACE          reduce using rule 14 (as_num -> NUM9 .)


state 29

    (15) as_set -> LBRACE . as_set_list RBRACE
    (16) as_set_list -> . as_num COMMA as_set_list
    (17) as_set_list -> . as_num
    (13) as_num -> . NUM10
    (14) as_num -> . NUM9

    NUM10           shift and go to state 27
    NUM9            shift and go to state 28

    as_set_list                    shift and go to state 31
    as_num                         shift and go to state 32

state 30

    (9) as_path -> as_element as_path .

    RECORD_TYPE     reduce using rule 9 (as_path -> as_element as_path .)
    $end            reduce using rule 9 (as_path -> as_element as_path .)


state 31

    (15) as_set -> LBRACE as_set_list . RBRACE

    RBRACE          shift and go to state 33


state 32

    (16) as_set_list -> as_num . COMMA as_set_list
    (17) as_set_list -> as_num .

    COMMA           shift and go to state 34
    RBRACE          reduce using rule 17 (as_set_list -> as_num .)


state 33

    (15) as_set -> LBRACE as_set_list RBRACE .

    NUM10           reduce using rule 15 (as_set -> LBRACE as_set_list RBRACE .)
    NUM9            reduce using rule 15 (as_set -> LBRACE as_set_list RBRACE .)
    LBRACE          reduce using rule 15 (as_set -> LBRACE as_set_list RBRACE .)
    RECORD_TYPE     reduce using rule 15 (as_set -> LBRACE as_set_list RBRACE .)
    $end            reduce using rule 15 (as_set -> LBRACE as_set_list RBRACE .)


state 34

    (16) as_set_list -> as_num COMMA . as_set_list
    (16) as_set_list -> . as_num COMMA as_set_list
    (17) as_set_list -> . as_num
    (13) as_num -> . NUM10
    (14) as_num -> . NUM9

    NUM10           shift and go to state 27
    NUM9            shift and go to state 28

    as_num                         shift and go to state 32
    as_set_list                    shift and go to state 35

state 35

    (16) as_set_list -> as_num COMMA as_set_list .

    RBRACE          reduce using rule 16 (as_set_list -> as_num COMMA as_set_list .)

